# csbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_debug.bat  build_realse.bat  build_release32.bat  vcpkg.json
.github/workflows/: release.yml
doc/: README_EN.md
src/: main.cpp
src/WindowUtils/: CMakeLists.txt  WindowUtils.cpp  WindowUtils.h
src/common/: ArgumentParser.h  CMakeLists.txt  Config.h  Logger.h
src/engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
src/game/: CMakeLists.txt  Entity.h  GameContext.h
src/math/: CMakeLists.txt  Matrix4x4.h  Vector3.h  WorldToScreen.h
src/memory/: AddressOffsets.h  CMakeLists.txt  MemoryReader.cpp  MemoryReader.h  Process.cpp  Process.h
src/render/: CMakeLists.txt  OverlayWindow.cpp  OverlayWindow.h  Renderer.cpp  Renderer.h
tests/unit/: CMakeLists.txt
tests/unit/common/: ArgumentParserTest.cpp  CMakeLists.txt
tests/unit/game/: CMakeLists.txt  EntityTest.cpp  GameContextTest.cpp
tests/unit/math/: CMakeLists.txt  Matrix4x4Test.cpp  Vector3Test.cpp  WorldToScreenTest.cpp
tests/unit/memory/: AddressOffsetsTest.cpp  CMakeLists.txt
tests/unit/render/: CMakeLists.txt  RendererTest.cpp
